Add vm type dropdown examples with resource definitions
- add to property definition
- add to collection
- add to selection
- add display of vm_type property in web server and in errand log
- add vm_type property to webserver & errand spec files

[#137952865] Service Authors can use default sizing for VM type dropdown selectors

--- a/example-release/jobs/example-errand/templates/run.erb
+++ b/example-release/jobs/example-errand/templates/run.erb
@@ -105,6 +105,7 @@ echo "Configured Values"
      'configured.secret',
      'configured.rsa_cert_credentials.public_key_pem',
      'configured.rsa_cert_credentials.cert_and_private_key_pems',
+     'configured.vm_type',
    ].each do |property| %>
   echo <%= Shellwords.escape(property) %>=<% if_p(property) do |prop| %><%= Shellwords.escape(prop) %><% end %>
 <% end %>
