--- a/example-release/jobs/web_server/templates/index.html.erb
+++ b/example-release/jobs/web_server/templates/index.html.erb
@@ -143,6 +143,7 @@
         'configured.secret',
         'configured.rsa_cert_credentials.public_key_pem',
         'configured.rsa_cert_credentials.cert_and_private_key_pems',
+        'configured.vm_type'
       ].each do |property| %>
         <dt><%= property %></dt>
         <dd>
