--- a/example-product/metadata/example-product.yml.erb
+++ b/example-product/metadata/example-product.yml.erb
@@ -116,6 +116,9 @@ form_types:
       - reference: .web_server.client_certificate
         label: Example certificate
         description: 'Configure a certificate'
+      - reference: .web_server.example_vm_type_dropdown
+        label: Example vm type dropdown
+        description: 'The larger the VM the more cookies we can bake'
   - name: example_collections_form
     label: 'Collection example'
     description: 'A collection example form'
@@ -164,6 +167,8 @@ form_types:
                 description: 'Nothing like an apple, would not buy again'
               - reference: .properties.example_selector.pizza_option.other_toppings
                 label: 'Other toppings'
+              - reference: .properties.example_selector.pizza_option.cheesy_vm_type
+                label: 'Cheesy VM Type'
           - reference: .properties.example_selector.filet_mignon_option
             label: 'Filet Mignon'
             property_inputs:
@@ -219,6 +224,7 @@ property_blueprints:
                 pepperoni: (( .properties.example_selector.pizza_option.pepperoni.value ))
                 pineapple: (( .properties.example_selector.pizza_option.pineapple.value ))
                 other: (( .properties.example_selector.pizza_option.other_toppings.value ))
+                cheesy_vm_type: (( .properties.example_selector.pizza_option.cheesy_vm_type.value ))
           - name: provides_section
             manifest: |
               as: 'pizza_link_web_server_job'
@@ -241,6 +247,20 @@ property_blueprints:
             constraints:
             - must_match_regex: '\A[^!@#$%^&*()]*\z'
               error_message: 'This name cannot contain special characters.'
+          - name: cheesy_vm_type
+            type: vm_type_dropdown
+            configurable: true
+            optional: true
+            resource_definitions:
+            - name: ram
+              configurable: true
+              default: 1024
+            - name: ephemeral_disk
+              configurable: true
+              default: 1024
+            - name: cpu
+              configurable: true
+              default: 1
       - name: filet_mignon_option
         select_value: Filet Mignon
         named_manifests:
@@ -426,6 +446,7 @@ job_types:
             port: (( .web_server.example_port.value ))
             smtp_authentication: (( .web_server.example_smtp_authentication.value ))
             ca_certificate: (( .web_server.client_certificate.value ))
+            vm_type: (( .web_server.example_vm_type_dropdown.value ))
             record_collection: (( .properties.example_collection.value ))
             selector: (( .properties.example_selector.selected_option.parsed_manifest(my_snippet) ))
             secret: (( .web_server.configured_secret.value ))
@@ -673,6 +694,20 @@ job_types:
       type: ca_certificate
       configurable: true
       optional: true
+    - name: example_vm_type_dropdown
+      type: vm_type_dropdown
+      configurable: true
+      optional: true
+      resource_definitions:
+      - name: ram
+        configurable: true
+        default: 1024
+      - name: ephemeral_disk
+        configurable: true
+        default: 1024
+      - name: cpu
+        configurable: true
+        default: 1
     manifest: |
       credhub:
         concatenated_password: prefix-((( credhub-password )))-suffix
@@ -752,6 +787,7 @@ job_types:
         port: (( example_port.value ))
         smtp_authentication: (( example_smtp_authentication.value ))
         ca_certificate: (( client_certificate.value ))
+        vm_type: (( example_vm_type_dropdown.value ))
         record_collection: (( property_with_nil_value.value || .properties.example_collection.value ))
         selector: (( .properties.example_selector.selected_option.parsed_manifest(my_snippet) ))
         secret: "(( false ? true : configured_secret.value ))"
