--- a/example-release/jobs/example-errand/templates/run.erb
+++ b/example-release/jobs/example-errand/templates/run.erb
@@ -105,7 +105,8 @@ echo "Configured Values"
      'configured.secret',
      'configured.rsa_cert_credentials.public_key_pem',
      'configured.rsa_cert_credentials.cert_and_private_key_pems',
-     'configured.vm_type',
+     'configured.example_vm_type_dropdown_value',
+     'configured.example_disk_type_dropdown_value',
    ].each do |property| %>
   echo <%= Shellwords.escape(property) %>=<% if_p(property) do |prop| %><%= Shellwords.escape(prop) %><% end %>
 <% end %>
