--- a/example-release/jobs/web_server/templates/index.html.erb
+++ b/example-release/jobs/web_server/templates/index.html.erb
@@ -143,7 +143,8 @@
         'configured.secret',
         'configured.rsa_cert_credentials.public_key_pem',
         'configured.rsa_cert_credentials.cert_and_private_key_pems',
-        'configured.vm_type'
+        'configured.example_vm_type_dropdown_value',
+        'configured.example_disk_type_dropdown_value',
       ].each do |property| %>
         <dt><%= property %></dt>
         <dd>
