Example uses of $director.tld and product.network_name
- add to errand-type and regular jobs

[#151827743] Create a double-parens accessor to return the network name for a product
[#151827781] Create a double-parens accessor to return the TLD of the bosh director

Signed-off-by: Rachel Heaton <rheaton@pivotal.io>

--- a/example-product/metadata/example-product.yml.erb
+++ b/example-product/metadata/example-product.yml.erb
@@ -518,8 +518,10 @@ job_types:
             password: (( $director.password ))
             ntp_servers: (( $director.ntp_servers ))
             ca_public_key: (( $director.ca_public_key ))
+            tld: (( $director.tld ))
           product:
             deployment_name: (( ..example-product.deployment_name ))
+            network_name: (( ..example-product.network_name ))
           self:
             stemcell_version: (( $self.stemcell_version ))
     errand: true
@@ -877,8 +879,10 @@ job_types:
         password: (( $director.password ))
         ntp_servers: (( $director.ntp_servers ))
         ca_public_key: (( $director.ca_public_key ))
+        tld: (( $director.tld ))
       product:
         deployment_name: (( .deployment_name ))
+        network_name: (( .network_name ))
       self:
         stemcell_version: (( $self.stemcell_version ))
   - name: no_op
