Consume new bosh_metrics_forwarder_client accessors
[#151416344]

Signed-off-by: Alvaro Perez-Shirley <aperezshirley@pivotal.io>

--- a/example-release/jobs/web_server/templates/index.html.erb
+++ b/example-release/jobs/web_server/templates/index.html.erb
@@ -180,6 +180,8 @@
          'director_provided_accessors.ntp_servers',
          'director_provided_accessors.ca_public_key',
          'director_provided_accessors.tld',
+         'director_provided_accessors.bosh_metrics_forwarder_client_name',
+         'director_provided_accessors.bosh_metrics_forwarder_client_secret',
        ].each do |property| %>
         <dt><%= property %></dt>
         <dd><pre><%= p(property) %></pre></dd>
