--- a/example-product/metadata/example-product.yml.erb
+++ b/example-product/metadata/example-product.yml.erb
@@ -1,7 +1,7 @@
 ---
 name: example-product
 product_version: <%= version.inspect %>
-minimum_version_for_upgrade: "1.7.0"
+minimum_version_for_upgrade: "0"
 metadata_version: "2.0"
 label: 'Ops Manager: Example Product'
 description: An example product to demonstrate Ops Manager product-author features
@@ -519,6 +519,8 @@ job_types:
             ntp_servers: (( $director.ntp_servers ))
             ca_public_key: (( $director.ca_public_key ))
             tld: (( $director.tld ))
+            bosh_metrics_forwarder_client_name: (( $director.bosh_metrics_forwarder_client_name ))
+            bosh_metrics_forwarder_client_secret: (( $director.bosh_metrics_forwarder_client_secret ))
           product:
             deployment_name: (( ..example-product.deployment_name ))
             network_name: (( ..example-product.network_name ))
@@ -880,6 +882,8 @@ job_types:
         ntp_servers: (( $director.ntp_servers ))
         ca_public_key: (( $director.ca_public_key ))
         tld: (( $director.tld ))
+        bosh_metrics_forwarder_client_name: (( $director.bosh_metrics_forwarder_client_name ))
+        bosh_metrics_forwarder_client_secret: (( $director.bosh_metrics_forwarder_client_secret ))
       product:
         deployment_name: (( .deployment_name ))
         network_name: (( .network_name ))
