--- a/example-release/jobs/example-errand/templates/run.erb
+++ b/example-release/jobs/example-errand/templates/run.erb
@@ -117,6 +117,8 @@ echo 'Director Provided Accessors'
      'director_provided_accessors.ntp_servers',
      'director_provided_accessors.ca_public_key',
      'director_provided_accessors.tld',
+     'director_provided_accessors.bosh_metrics_forwarder_client_name',
+     'director_provided_accessors.bosh_metrics_forwarder_client_secret',
    ].each do |property| %>
   echo <%= Shellwords.escape("#{property}=#{p(property)}") %>
 <% end %>
