Change pre_delete_errand run default to 'on'
- before adding colocated errand, there was no specified default so
opsman ran it. we added default for documentation purposes, but we should
have set it to 'on' and not 'off'

[#151766074] OpsManager should have an alias for the new bosh CLI

Signed-off-by: Alvaro Perez-Shirley <aperezshirley@pivotal.io>

--- a/example-product/metadata/example-product.yml.erb
+++ b/example-product/metadata/example-product.yml.erb
@@ -568,7 +568,7 @@ job_types:
     errand: true
     resource_label: an errand to log properties
     run_post_deploy_errand_default: on
-    run_pre_delete_errand_default: off
+    run_pre_delete_errand_default: on
     static_ip: 0
     dynamic_ip: 1
     max_in_flight: 1
