--- a/example-product/metadata/example-product.yml.erb
+++ b/example-product/metadata/example-product.yml.erb
@@ -222,14 +222,14 @@ form_types:
           label: 'Utilize it'
         - reference: .properties.example_selector_with_deployed_director_accessors.disable_option
           label: 'Do not utilize it'
-      - reference: .properties.caitlyn_and_brian_selector
-        label: 'Pre-migration example selector (Caitlyn & Brian debugging) (per Dave Walters)'
+      - reference: .properties.yu_and_cunnie_selector
+        label: 'Pre-migration example selector (Yu & Cunnie debugging) (per Dave Walters)'
         description: 'This should not be reflected in any BOSH manifest'
         selector_property_inputs:
-        - reference: .properties.caitlyn_and_brian_selector.caitlyn
-          label: 'Caitlyn'
-        - reference: .properties.caitlyn_and_brian_selector.brian
-          label: 'Brian'
+        - reference: .properties.yu_and_cunnie_selector.yu
+          label: 'Yu'
+        - reference: .properties.yu_and_cunnie_selector.cunnie
+          label: 'Cunnie'
   - name: example_runtime_configs_form
     label: 'Runtime Config Selector Example'
     description: 'A runtime config example form'
@@ -488,15 +488,14 @@ property_blueprints:
           director_username: (( $director.username ))
           director_password: (( $director.password ))
   - type: selector
-    name: caitlyn_and_brian_selector
+    name: yu_and_cunnie_selector
     configurable: true
-    default: 'caitlyn'
+    default: 'cunnie'
     option_templates:
-    - name: caitlyn
-      select_value: 'caitlyn'
-    - name: brian
-      select_value: 'brian'
-
+    - name: yu
+      select_value: 'yu'
+    - name: cunnie
+      select_value: 'cunnie'
 job_types:
   - name: example-errand
     description: The very best illustrative errand that prints all the properties, including secrets.
