--- a/example-broker-product/metadata/example-broker-product.yml.erb
+++ b/example-broker-product/metadata/example-broker-product.yml.erb
@@ -1,9 +1,10 @@
+<% product_name = "example-broker-product#{suffix}" -%>
 ---
-name: example-broker-product
+name: <%= product_name %>
 product_version: <%= version.inspect %>
 minimum_version_for_upgrade: "0"
 metadata_version: "2.1"
-label: 'Ops Manager: Example Broker Product'
+label: 'Ops Manager: Example Broker Product<%= suffix ? " #{suffix}" : nil%>'
 description: An example product to demonstrate Ops Manager broker product-author features
 rank: 1
 service_broker: true
