Update example product to scope runtime config
- scope it down to only affect VMs in the tile's own deployment

[nostory]

Signed-off-by: Caitlyn Yu <cyu@pivotal.io>

--- a/example-product/metadata/example-product.yml.erb
+++ b/example-product/metadata/example-product.yml.erb
@@ -456,13 +456,16 @@ property_blueprints:
              version: 15
           addons:
             - name: misc
-              jobs:
-                - name: login_banner
-                  release: os-conf
-              properties:
-                login_banner:
-                  text: |
-                    (( .properties.example_runtime_config_selector.enable_option.salutation.value )). You are welcome here. Always be kind. 🤗
+              include:
+                deployments:
+                  - (( .deployment_name ))
+                jobs:
+                  - name: login_banner
+                    release: os-conf
+                    properties:
+                      login_banner:
+                        text: |
+                          (( .properties.example_runtime_config_selector.enable_option.salutation.value )). You are welcome here. Always be kind. 🤗
   - type: selector
     name: example_selector_with_deployed_director_accessors
     configurable: true
