--- a/example-release/jobs/web_server/templates/index.html.erb
+++ b/example-release/jobs/web_server/templates/index.html.erb
@@ -55,19 +55,26 @@
     <h2>Generated values:</h2>
     <dl>
     <% [
+        'generated.rsa_cert_credentials.present',
+        'generated.rsa_cert_credentials.private_key_pem',
+        'generated.rsa_cert_credentials.cert_pem',
         'generated.rsa_cert_credentials.public_key_pem',
         'generated.rsa_cert_credentials.cert_and_private_key_pems',
+        'generated.rsa_pkey_credentials.present',
         'generated.rsa_pkey_credentials.public_key_pem',
         'generated.rsa_pkey_credentials.private_key_pem',
         'generated.rsa_pkey_credentials.public_key_openssh',
         'generated.rsa_pkey_credentials.public_key_fingerprint',
+        'generated.salted_credentials.present',
         'generated.salted_credentials.sha512_hashed_password',
         'generated.salted_credentials.identity',
         'generated.salted_credentials.salt',
         'generated.salted_credentials.password',
+        'generated.simple_credentials.present',
         'generated.simple_credentials.identity',
         'generated.simple_credentials.password',
-        'generated.secret',
+        'generated.secret.present',
+        'generated.secret.value',
         'generated.uuid',
       ].each do |property| %>
       <dt><%= property %></dt>
