--- a/example-product/metadata/example-product.yml.erb
+++ b/example-product/metadata/example-product.yml.erb
@@ -1,13 +1,16 @@
-<% product_name = "example-product#{suffix}" -%>
+<% product_name = "example-dependent-product#{suffix}" -%>
 ---
 name: <%= product_name %>
 product_version: <%= version.inspect %>
 minimum_version_for_upgrade: "0"
 metadata_version: "2.2"
-label: 'Ops Manager: Example Product<%= suffix ? " #{suffix}" : nil%>'
-description: An example product to demonstrate Ops Manager product-author features
+label: 'Ops Manager: Example Dependent Product<%= suffix ? " #{suffix}" : nil%>'
+description: An example product to demonstrate Ops Manager product-author features which depends on credentials in the regular Example Product
 rank: 1
 service_broker: false # Default value
+requires_product_versions:
+  - name: example-product
+    version: ">= 0"
 stemcell_criteria:
   os: ubuntu-trusty
   version: <%= stemcell_version.inspect %>
@@ -509,30 +512,30 @@ job_types:
             no_proxy: (( $ops_manager.no_proxy ))
             dns_enabled: (( $ops_manager.dns_enabled ))
             rsa_cert_credentials:
-              present: (( .web_server.generated_rsa_cert_credentials.value_present? ))
-              public_key_pem: (( .web_server.generated_rsa_cert_credentials.public_key_pem ))
-              cert_and_private_key_pems: (( .web_server.generated_rsa_cert_credentials.cert_and_private_key_pems ))
-              cert_pem: (( .web_server.generated_rsa_cert_credentials.cert_pem ))
-              private_key_pem: (( .web_server.generated_rsa_cert_credentials.private_key_pem ))
+              present: (( ..example-product.web_server.generated_rsa_cert_credentials.value_present? ))
+              public_key_pem: (( ..example-product.web_server.generated_rsa_cert_credentials.public_key_pem ))
+              cert_and_private_key_pems: (( ..example-product.web_server.generated_rsa_cert_credentials.cert_and_private_key_pems ))
+              cert_pem: (( ..example-product.web_server.generated_rsa_cert_credentials.cert_pem ))
+              private_key_pem: (( ..example-product.web_server.generated_rsa_cert_credentials.private_key_pem ))
             rsa_pkey_credentials:
-              present: (( .web_server.generated_rsa_pkey_credentials.value_present? ))
-              public_key_pem: (( .web_server.generated_rsa_pkey_credentials.public_key_pem ))
-              private_key_pem: (( .web_server.generated_rsa_pkey_credentials.private_key_pem ))
-              public_key_openssh: (( .web_server.generated_rsa_pkey_credentials.public_key_openssh ))
-              public_key_fingerprint: (( .web_server.generated_rsa_pkey_credentials.public_key_fingerprint ))
+              present: (( ..example-product.web_server.generated_rsa_pkey_credentials.value_present? ))
+              public_key_pem: (( ..example-product.web_server.generated_rsa_pkey_credentials.public_key_pem ))
+              private_key_pem: (( ..example-product.web_server.generated_rsa_pkey_credentials.private_key_pem ))
+              public_key_openssh: (( ..example-product.web_server.generated_rsa_pkey_credentials.public_key_openssh ))
+              public_key_fingerprint: (( ..example-product.web_server.generated_rsa_pkey_credentials.public_key_fingerprint ))
             salted_credentials:
-              present: (( .web_server.generated_salted_credentials.value_present? ))
-              sha512_hashed_password: (( .web_server.generated_salted_credentials.sha512_hashed_password ))
-              identity: (( .web_server.generated_salted_credentials.identity ))
-              salt: (( .web_server.generated_salted_credentials.salt ))
-              password: (( .web_server.generated_salted_credentials.password ))
+              present: (( ..example-product.web_server.generated_salted_credentials.value_present? ))
+              sha512_hashed_password: (( ..example-product.web_server.generated_salted_credentials.sha512_hashed_password ))
+              identity: (( ..example-product.web_server.generated_salted_credentials.identity ))
+              salt: (( ..example-product.web_server.generated_salted_credentials.salt ))
+              password: (( ..example-product.web_server.generated_salted_credentials.password ))
             simple_credentials:
-              present: (( .web_server.generated_simple_credentials.value_present? ))
-              identity: (( .web_server.generated_simple_credentials.identity ))
-              password: (( .web_server.generated_simple_credentials.password ))
+              present: (( ..example-product.web_server.generated_simple_credentials.value_present? ))
+              identity: (( ..example-product.web_server.generated_simple_credentials.identity ))
+              password: (( ..example-product.web_server.generated_simple_credentials.password ))
             secret:
-              present: (( .web_server.generated_secret.value_present? ))
-              value: (( .web_server.generated_secret.value ))
+              present: (( ..example-product.web_server.generated_secret.value_present? ))
+              value: (( ..example-product.web_server.generated_secret.value ))
             uuid: (( .web_server.generated_uuid.value ))
             for_migration_to_credhub:
               rsa_cert_credentials:
@@ -870,30 +873,30 @@ job_types:
         dns_enabled: (( $ops_manager.dns_enabled ))
         root_rsa_certificate: (( $ops_manager.ca_certificate ))
         rsa_cert_credentials:
-          present: (( generated_rsa_cert_credentials.value_present? ))
-          public_key_pem: (( generated_rsa_cert_credentials.public_key_pem ))
-          cert_and_private_key_pems: (( generated_rsa_cert_credentials.cert_and_private_key_pems ))
-          cert_pem: (( generated_rsa_cert_credentials.cert_pem ))
-          private_key_pem: (( generated_rsa_cert_credentials.private_key_pem ))
+          present: (( ..example-product.web_server.generated_rsa_cert_credentials.value_present? ))
+          public_key_pem: (( ..example-product.web_server.generated_rsa_cert_credentials.public_key_pem ))
+          cert_and_private_key_pems: (( ..example-product.web_server.generated_rsa_cert_credentials.cert_and_private_key_pems ))
+          cert_pem: (( ..example-product.web_server.generated_rsa_cert_credentials.cert_pem ))
+          private_key_pem: (( ..example-product.web_server.generated_rsa_cert_credentials.private_key_pem ))
         rsa_pkey_credentials:
-          present: (( generated_rsa_pkey_credentials.value_present? ))
-          public_key_pem: (( generated_rsa_pkey_credentials.public_key_pem ))
-          private_key_pem: (( generated_rsa_pkey_credentials.private_key_pem ))
-          public_key_openssh: (( generated_rsa_pkey_credentials.public_key_openssh ))
-          public_key_fingerprint: (( generated_rsa_pkey_credentials.public_key_fingerprint ))
+          present: (( ..example-product.web_server.generated_rsa_pkey_credentials.value_present? ))
+          public_key_pem: (( ..example-product.web_server.generated_rsa_pkey_credentials.public_key_pem ))
+          private_key_pem: (( ..example-product.web_server.generated_rsa_pkey_credentials.private_key_pem ))
+          public_key_openssh: (( ..example-product.web_server.generated_rsa_pkey_credentials.public_key_openssh ))
+          public_key_fingerprint: (( ..example-product.web_server.generated_rsa_pkey_credentials.public_key_fingerprint ))
         salted_credentials:
-          present: (( generated_salted_credentials.value_present? ))
-          sha512_hashed_password: (( generated_salted_credentials.sha512_hashed_password ))
-          identity: (( generated_salted_credentials.identity ))
-          salt: (( generated_salted_credentials.salt ))
-          password: (( generated_salted_credentials.password ))
+          present: (( ..example-product.web_server.generated_salted_credentials.value_present? ))
+          sha512_hashed_password: (( ..example-product.web_server.generated_salted_credentials.sha512_hashed_password ))
+          identity: (( ..example-product.web_server.generated_salted_credentials.identity ))
+          salt: (( ..example-product.web_server.generated_salted_credentials.salt ))
+          password: (( ..example-product.web_server.generated_salted_credentials.password ))
         simple_credentials:
-          present: (( generated_simple_credentials.value_present? ))
-          identity: (( generated_simple_credentials.identity ))
-          password: (( generated_simple_credentials.password ))
+          present: (( ..example-product.web_server.generated_simple_credentials.value_present? ))
+          identity: (( ..example-product.web_server.generated_simple_credentials.identity ))
+          password: (( ..example-product.web_server.generated_simple_credentials.password ))
         secret:
-          present: (( .web_server.generated_secret.value_present? ))
-          value: (( .web_server.generated_secret.value ))
+          present: (( ..example-product.web_server.generated_secret.value_present? ))
+          value: (( ..example-product.web_server.generated_secret.value ))
         uuid: (( generated_uuid.value ))
         # Note that ':' is a special value in yaml, so ternaries need to be quoted...
         ternary_with_property_example: "(( property_with_true_value.value ? 'hello world' : generated_uuid.value ))"
